--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Javascript</title>
     <link href="./img/favicon.ico" rel="icon" type="image/x- icon">
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
+    <script src="./js/login.js" type="text/javascript"></script>
 </head>
 <body>
 
     <!--HEADER-->
     <div id="header">
         <h1>Desarrollo WEB en entorno cliente</h1>
-        <h2>Ejercicio 1: Plantilla03a</h2>
+        <h2>FUNDAMENTOS DE JS (ES6)</h2>
     </div>
 
     <!--NAVIGATION BAR-->
@@ -24,22 +25,25 @@
         <a href="https://github.com/MiguelAngelAvilaRosas1DAW" target="_blank">Github</a>
     </div>
 
-    <!--CARDS-->
-    <div class="grid3">
-        <div class="card">
-            <h2>Titulo ejercicio 01</h2>
-            <p>Descripción del ejercicio 01</p>
-            <a href="./ejercicios/ejer01/index.html">Solución</a>
-        </div>
-        <div class="card">
-            <h2>Titulo ejercicio 02</h2>
-            <p>Descripción del ejercicio 02</p>
-            <a href="./ejercicios/ejer02/index.html">Solución</a>
-        </div>
-        <div class="card">
-            <h2>...</h2>
-            <p>...</p>
-            <a href="">Solución</a>
+    <!--MAIN CONTENT-->
+    <div id="mainContent">
+        <!--CARDS-->
+        <div class="grid3">
+            <div class="card">
+                <h2>Titulo ejercicio 01</h2>
+                <p>Descripción del ejercicio 01</p>
+                <a href="./ejercicios/ejer01/index.html">Solución</a>
+            </div>
+            <div class="card">
+                <h2>Titulo ejercicio 02</h2>
+                <p>Descripción del ejercicio 02</p>
+                <a href="./ejercicios/ejer02/index.html">Solución</a>
+            </div>
+            <div class="card">
+                <h2>...</h2>
+                <p>...</p>
+                <a href="">Solución</a>
+            </div>
         </div>
     </div>
 
