--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Javascript</title>
     <link href="./img/favicon.ico" rel="icon" type="image/x- icon">
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
-    <script src="./js/login.js" type="text/javascript"></script>
+    <script defer src="./js/login.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -24,6 +24,20 @@
         <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank">MDN</a>
         <a href="https://github.com/MiguelAngelAvilaRosas1DAW" target="_blank">Github</a>
     </div>
+
+    <!--LOGIN-->
+
+    <form id="loginForm" class="card">
+        <h2 id="cardTitle">Iniciar Sesión</h2>
+        <div id="cardBody">
+            <label for="username">Nombre de usuario:</label><br>
+            <input type="text" id="username" name="username" required><br><br>
+            <label for="password">Contraseña:</label><br>
+            <input type="password" id="password" name="password" required><br><br>
+            <input type="submit" value="Ingresar">
+            <p id="loginMessage"></p>
+        </div>
+    </form>
 
     <!--MAIN CONTENT-->
     <div id="mainContent">
