--- a/index.html
+++ b/index.html
@@ -2,69 +2,38 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>Pagina de registro</title>
+    <!--Enlace icono de la página-->
     <link href="./img/favicon.ico" rel="icon" type="image/x- icon">
+
+    <!--Enlace al estilo de la página-->
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
+
+    <!--Enlace al script del Login (defer hace que se ejecute primero)-->
+    <script defer src="./js/getCookie.js" type="text/javascript"></script>
+    <script defer src="./js/setCookie.js" type="text/javascript"></script>
     <script defer src="./js/login.js" type="text/javascript"></script>
 </head>
 <body>
-
-    <!--HEADER-->
-    <div id="header">
-        <h1>Desarrollo WEB en entorno cliente</h1>
-        <h2>FUNDAMENTOS DE JS (ES6)</h2>
-    </div>
-
-    <!--NAVIGATION BAR-->
-    <div id="navigationBar" class="grid4">
-        <a href="https://www.w3schools.com/js/default.asp" target="_blank">W3schools</a>
-        <a href="https://es.javascript.info/js" target="_blank">Info JavaScript</a>
-        <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank">MDN</a>
-        <a href="https://github.com/MiguelAngelAvilaRosas1DAW" target="_blank">Github</a>
-    </div>
-
-    <!--LOGIN-->
-
     <form id="loginForm" class="card">
         <h2 id="cardTitle">Iniciar Sesión</h2>
         <div id="cardBody">
             <label for="username">Nombre de usuario:</label><br>
+
+            <!--Campo para introducir el nombre de usuario-->
             <input type="text" id="username" name="username" required><br><br>
             <label for="password">Contraseña:</label><br>
+
+            <!--Campo para introducir la contraseña-->
             <input type="password" id="password" name="password" required><br><br>
-            <input type="submit" value="Ingresar">
+
+            <!--Boton de comprovación-->
+            <input id="submitButton" type="submit" value="Ingresar">
+
+            <!--Mensaje informativo del login-->
             <p id="loginMessage"></p>
         </div>
     </form>
-
-    <!--MAIN CONTENT-->
-    <div id="mainContent">
-        <!--CARDS-->
-        <div class="grid3">
-            <div class="card">
-                <h2>Titulo ejercicio 01</h2>
-                <p>Descripción del ejercicio 01</p>
-                <a href="./ejercicios/ejer01/index.html">Solución</a>
-            </div>
-            <div class="card">
-                <h2>Titulo ejercicio 02</h2>
-                <p>Descripción del ejercicio 02</p>
-                <a href="./ejercicios/ejer02/index.html">Solución</a>
-            </div>
-            <div class="card">
-                <h2>...</h2>
-                <p>...</p>
-                <a href="">Solución</a>
-            </div>
-        </div>
-    </div>
-
-    <!--FOOTER-->
-    <div id="footer" class="grid2Footer">
-        <h2>Hecho por Miguel Ángel Ávila Rosas</h2>
-        <img id="caraFooter" src="./img/ImagenCara.png" alt="Miguel Ángel Ávila Rosas, creador de la pagina.">
-    </div>
 </body>
 </html>
