ACTUALIZACIÓN: Login con cookies y NUMBER
Permite al usuario quedarse registrado en la pagina por un corto periodo de tiempo, y una vez pasado ese tiempo, se le volvera a pedir iniciar sesión.

Ademas se han añadido dos ejercicios con NUMBER, una calculadora y un conversor de bases.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <label for="username">Nombre de usuario:</label><br>
 
             <!--Campo para introducir el nombre de usuario-->
-            <input type="text" id="username" name="username" required><br><br>
+            <input type="text" id="username" name="username" value="miguel" required><br><br>
             <label for="password">Contraseña:</label><br>
 
             <!--Campo para introducir la contraseña-->
-            <input type="password" id="password" name="password" required><br><br>
+            <input type="password" id="password" name="password" value="elmasalto" required><br><br>
 
             <!--Boton de comprovación-->
             <input id="submitButton" type="submit" value="Ingresar">
