--- a/mainPage.html
+++ b/mainPage.html
@@ -14,7 +14,8 @@
     <!--Enlace al script del Login (defer hace que se ejecute primero)-->
     <script defer src="./js/getCookie.js" type="text/javascript"></script>
     <script defer src="./js/eraseCookie.js" type="text/javascript"></script>
-    <script defer src="./js/mainPage.js" type="text/javascript"></script>
+    <script defer src="./js/mainFunctions.js" type="text/javascript"></script>
+    <script defer src="./js/navbarFunctions.js" type="text/javascript"></script>
     
 </head>
 <body>
@@ -22,7 +23,7 @@
     <!--HEADER-->
     <div id="header">
         <h1>Desarrollo WEB en entorno cliente</h1>
-        <h2>Login de formularios</h2>
+        <h2>Login de formularios con cookies</h2>
     </div>
 
     <!--NAVIGATION BAR-->
@@ -30,9 +31,9 @@
         <a href="https://www.w3schools.com/js/default.asp" target="_blank">W3schools</a>
         <a href="https://es.javascript.info/js" target="_blank">Info JavaScript</a>
         <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank">MDN</a>
-        <a href="https://github.com/MiguelAngelAvilaRosas1DAW" target="_blank">Github</a>
+        <a href="https://github.com/MiguelAngelAvilaRosas1DAW/DWEC_Project" target="_blank">Github</a>
         <select name="number" id="ejercicios">
-            <option selected disabled>Elije un ejercicio</option>
+            <option selected disabled>NUMBER</option>
             <option id="miniCalculator" value="miniCalculator">Mini calculadora</option>
             <option id="converter" value="converter"> Conversor de bases</option>
         </select>
