--- a/mainPage.html
+++ b/mainPage.html
@@ -33,7 +33,7 @@
         <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank">MDN</a>
         <a href="https://github.com/MiguelAngelAvilaRosas1DAW/DWEC_Project" target="_blank">Github</a>
     </div>
-    <div id="ejerciciosTotales" class="grid3">
+    <div id="ejerciciosTotales" class="grid4">
         <select name="number" class="ejercicios">
             <option selected>NUMBER</option>
             <option id="miniCalculator" value="miniCalculator">Mini calculadora</option>
@@ -46,6 +46,12 @@
         <select name="array" class="ejercicios">
             <option selected>ARRAY</option>
             <option id="matrizTransformator" value="matrizTransformator">Transformador de matrices</option>
+        </select>
+        <select name="almacenamiento" class="ejercicios">
+            <option selected>ALMACENAMIENTO</option>
+            <option id="almacenamientoCookie" value="almacenamientoCookie">Almacenamiento con Cookies</option>
+            <option id="almacenamientoLocalStorage" value="almacenamientoLocalStorage">Almacenamiento con LocalStorage</option>
+            <option id="almacenamientoIndexedDb" value="almacenamientoIndexedDb">Almacenamiento con IndexedDB</option>
         </select>
     </div>
     <button id="logOut">LOG OUT</button>
