--- a/ejercicios/ejer05/cookie.html
+++ b/ejercicios/ejer05/cookie.html
@@ -82,7 +82,7 @@
                             </th>
                             <th>
                                 <button type="submit" id="guardar"> <div class="buttonText">Guardar</div>
-                                    <img src="../../img/save.svg" alt="Guardar" alt="Grabar dato"
+                                    <img src="../../img/save.svg" id="guardar" alt="Grabar dato"
                                         style="vertical-align: middle" />
                                 </button>
                                 <button type="submit" class="api" id="cargarApi"> <div class="buttonText">Cargar 1 API</div>
