--- a/ejercicios/ejer01/index.html
+++ b/ejercicios/ejer01/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-    <link href="../../img/favicon.ico" rel="icon" type="image/x- icon">
-    <link href="../../css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="./img/favicon.ico" rel="icon" type="image/x- icon">
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
-
+    <link href="../../css/styles.css" rel="stylesheet" type="text/css" />
     <script src="../../js/setIndexedDB.js" type="text/javascript"></script>
     <script defer src="../../js/deleteIndexedDB.js" type="text/javascript"></script>
     <script defer src="../../js/mainFunctions.js" type="text/javascript"></script>
-    <script defer src="./js/calculadora.js" type="text/javascript"></script>
+    <script defer src="./js/calc.js" type="text/javascript"></script>
 </head>
+
 <body>
 
     <!--HEADER-->
     <div id="header">
         <h1>Desarrollo WEB en entorno cliente</h1>
-        <h2>Calculadora</h2>
+        <h2>Calculadora grafica</h2>
     </div>
 
     <!--NAVIGATION BAR-->
@@ -29,10 +30,10 @@
         <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank">MDN</a>
         <a href="https://github.com/MiguelAngelAvilaRosas1DAW/DWEC_Project" target="_blank">Github</a>
     </div>
-    <div id="ejerciciosTotales" class="grid4">
+    <div id="ejerciciosTotales" class="grid5">
         <select name="number" class="ejercicios">
             <option selected>NUMBER</option>
-            <option id="miniCalculator" value="miniCalculator">Mini calculadora</option>
+            <option id="Calculator" value="Calculator">Calculadora</option>
             <option id="converter" value="converter">Conversor de bases</option>
         </select>
         <select name="string" class="ejercicios">
@@ -46,43 +47,56 @@
         <select name="almacenamiento" class="ejercicios">
             <option selected>ALMACENAMIENTO</option>
             <option id="almacenamientoCookie" value="almacenamientoCookie">Almacenamiento con Cookies</option>
-            <option id="almacenamientoLocalStorage" value="almacenamientoLocalStorage">Almacenamiento con LocalStorage</option>
+            <option id="almacenamientoLocalStorage" value="almacenamientoLocalStorage">Almacenamiento con LocalStorage
+            </option>
             <option id="almacenamientoIndexedDb" value="almacenamientoIndexedDb">Almacenamiento con IndexedDB</option>
+        </select>
+        <select name="estructura" class="ejercicios">
+            <option selected>ESTRUCTURA</option>
+            <option id="pila" value="pila">Pila</option>
+            <option id="cola" value="cola">Cola</option>
+            <option id="lista" value="lista">Lista</option>
         </select>
     </div>
     <button id="logOut">LOG OUT</button>
 
-    <!--CARD-->
-    
-<div id="mainContent">
-    <div class="card">
-        <div id="calculator">
-            <div id="valuesList">
-                <h1>Mini calculadora</h1>
-                <p>Valor 1:</p>
-                <input id="value1" class="values" type="number" value="">
+    <!--MAIN CONTENT-->
+    <div id="mainContent">
+        <div class="card">
+            <h1>Calculadora</h1>
+            <div id="contentBox">
+                <div>
+                    <input id="result" type="text" value="">
+                </div>
+                <div id="numbers">
+                    <input id="raizCuadrada" class="yellowButton calcButton" type="submit" value="√">
+                    <input id="percentage" class="yellowButton calcButton" type="submit" value="%">
+                    <input id="del" class="redButton calcButton" type="submit" value="<=">
+                    <input id="clear" class="redButton calcButton" type="submit" value="C">
 
-                <p>Valor 2:</p>
-                <input id="value2" class="values" type="number" value="">
-            </div>
-            <div id="operandsList">
-                <input id="suma" class="operands" type="submit" value="+">
-                <input id="resta" class="operands" type="submit" value="-">
-                <input id="multiplicacion" class="operands" type="submit" value="*">
-                <input id="division" class="operands" type="submit" value="/">
-                <input id="entero" class="operands" type="submit" value="_.">
-                <input id="decimal" class="operands" type="submit" value="._">
-                <input id="factorial" class="operands" type="submit" value="!">
-                <input id="resto" class="operands" type="submit" value="%">
+                    <input id="seven" class="blueButton calcButton" type="submit" value="7">
+                    <input id="eight" class="blueButton calcButton" type="submit" value="8">
+                    <input id="nine" class="blueButton calcButton" type="submit" value="9">
+                    <input id="division" class="yellowButton calcButton" type="submit" value="/">
+
+                    <input id="four" class="blueButton calcButton" type="submit" value="4">
+                    <input id="five" class="blueButton calcButton" type="submit" value="5">
+                    <input id="six" class="blueButton calcButton" type="submit" value="6">
+                    <input id="multiply" class="yellowButton calcButton" type="submit" value="*">
+
+                    <input id="one" class="blueButton calcButton" type="submit" value="1">
+                    <input id="two" class="blueButton calcButton" type="submit" value="2">
+                    <input id="three" class="blueButton calcButton" type="submit" value="3">
+                    <input id="plus" class="yellowButton calcButton" type="submit" value="+">
+
+                    <input id="decimal" class="yellowButton calcButton" type="submit" value=".">
+                    <input id="zero" class="blueButton calcButton" type="submit" value="0">
+                    <input id="equals" class="greenButton calcButton" type="submit" value="=">
+                    <input id="minus" class="yellowButton calcButton" type="submit" value="-">
+                </div>
             </div>
         </div>
-        <div>
-            <h2>Resultado:</h2>
-            <input id="result" class="values" disabled type="text" value="">
-        </div>
-        <a href="../../mainPage.html">Pagina principal</a>
     </div>
-</div>
 
     <!--FOOTER-->
     <div id="footer" class="grid2">
@@ -90,4 +104,5 @@
         <img id="caraFooter" src="../../img/ImagenCara.png" alt="Miguel Ángel Ávila Rosas, creador de la pagina.">
     </div>
 </body>
+
 </html>
