--- a/ejercicios/ejer03/index.html
+++ b/ejercicios/ejer03/index.html
@@ -29,10 +29,10 @@
         <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank">MDN</a>
         <a href="https://github.com/MiguelAngelAvilaRosas1DAW/DWEC_Project" target="_blank">Github</a>
     </div>
-    <div id="ejerciciosTotales" class="grid4">
+    <div id="ejerciciosTotales" class="grid5">
         <select name="number" class="ejercicios">
             <option selected>NUMBER</option>
-            <option id="miniCalculator" value="miniCalculator">Mini calculadora</option>
+            <option id="Calculator" value="Calculator">Calculadora</option>
             <option id="converter" value="converter">Conversor de bases</option>
         </select>
         <select name="string" class="ejercicios">
@@ -48,6 +48,12 @@
             <option id="almacenamientoCookie" value="almacenamientoCookie">Almacenamiento con Cookies</option>
             <option id="almacenamientoLocalStorage" value="almacenamientoLocalStorage">Almacenamiento con LocalStorage</option>
             <option id="almacenamientoIndexedDb" value="almacenamientoIndexedDb">Almacenamiento con IndexedDB</option>
+        </select>
+        <select name="estructura" class="ejercicios">
+            <option selected>ESTRUCTURA</option>
+            <option id="pila" value="pila">Pila</option>
+            <option id="cola" value="cola">Cola</option>
+            <option id="lista" value="lista">Lista</option>
         </select>
     </div>
     <button id="logOut">LOG OUT</button>
