--- a/ejercicios/ejer06/pila.html
+++ b/ejercicios/ejer06/pila.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-    <!--Enlace icono de la página-->
-    <link href="./img/favicon.ico" rel="icon" type="image/x- icon">
-
-    <!--Enlace al estilo de la página-->
+    <link href="../../img/favicon.ico" rel="icon" type="image/x- icon">
+    <link href="../../css/styles.css" rel="stylesheet" type="text/css" />
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
 
-    <!--Enlace al script del Login (defer hace que se ejecute primero)-->
-    <script defer src="./js/indexedDB.js" type="text/javascript"></script>
-    <script defer src="./js/deleteIndexedDB.js" type="text/javascript"></script>
-    <script defer src="./js/mainFunctions.js" type="text/javascript"></script>
-    <script defer src="./js/navbarFunctions.js" type="text/javascript"></script>
-    
+    <script defer src="../../js/indexedDB.js" type="text/javascript"></script>
+    <script defer src="../../js/mainFunctions.js" type="text/javascript"></script>
+    <script defer src="./js/navbar.js" type="text/javascript"></script>
+    <script src="./js/aleatorio.js" type="module"></script>>
+    <script src="./js/pila/lavar.js" type="module"></script>
+    <script src="./js/pila/paraLavar.js" type="module"></script>
+    <script src="./js/devolver.js" type="module"></script>
+    <script src="./js/mostrar.js" type="module"></script>
+    <script src="./js/pila/Pila.js" type="module"></script>
+    <script src="./js/pila/mainPila.js" type="module"></script>
 </head>
+
 <body>
 
     <!--HEADER-->
     <div id="header">
         <h1>Desarrollo WEB en entorno cliente</h1>
-        <h2>Pagina principal</h2>
+        <h2>POO con pilas</h2>
     </div>
 
     <!--NAVIGATION BAR-->
@@ -50,7 +54,8 @@
         <select name="almacenamiento" class="ejercicios">
             <option selected>ALMACENAMIENTO</option>
             <option id="almacenamientoCookie" value="almacenamientoCookie">Almacenamiento con Cookies</option>
-            <option id="almacenamientoLocalStorage" value="almacenamientoLocalStorage">Almacenamiento con LocalStorage</option>
+            <option id="almacenamientoLocalStorage" value="almacenamientoLocalStorage">Almacenamiento con LocalStorage
+            </option>
             <option id="almacenamientoIndexedDb" value="almacenamientoIndexedDb">Almacenamiento con IndexedDB</option>
         </select>
         <select name="estructura" class="ejercicios">
@@ -62,16 +67,32 @@
     </div>
     <button id="logOut">LOG OUT</button>
 
-    <!--MAIN CONTENT-->
+    <!--CARD-->
+
     <div id="mainContent">
-        <h2>Seleccione un ejercicio del desplegable.</h2>
-        
+        <div class="card">
+            <div class="boxContent">
+                <h1>Pila</h1>
+                <div class="grid-item">
+                    <input type='button' id="introducir" value="🩳 Introducir ropa" />
+                    <input type='button' id="obtener" value="🫳 Sacar Ropa" />
+                </div>
+                <div class="grid-item">
+                    <label>
+                        <pre>En la labadora: </pre>
+                    </label>
+                    <p id="resPila"></p>
+                </div>
+            </div>
+            <a href="../../mainPage.html">Pagina principal</a>
+        </div>
     </div>
 
     <!--FOOTER-->
     <div id="footer" class="grid2">
         <h2>Hecho por Miguel Ángel Ávila Rosas</h2>
-        <img id="caraFooter" src="./img/ImagenCara.png" alt="Miguel Ángel Ávila Rosas, creador de la pagina.">
+        <img id="caraFooter" src="../../img/ImagenCara.png" alt="Miguel Ángel Ávila Rosas, creador de la pagina.">
     </div>
 </body>
+
 </html>
